--- a/tuandeptrai.html
+++ b/tuandeptrai.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello mọi người</h1>
-    winlax hahaha dâdadasdsadda den day
-    tuấn đã thấy
-    hello win 
-
-    tuan nhập lần 2
-</body>
+    winlax hahaha dâdadasdsadda den day tuấn đã thấy hello win tuan nhập lần 2
+    <p>win đã nhập gì ở đây 1</p>
+  </body>
 </html>
