--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
   </head>
   <body>
     winlax
+    <div class="  ">
+      <div class="  -container">
+        <div class="  -close">X</div>
+        <div class="  -content">your content</div>
+      </div>
+    </div>
+
   </body>
 </html>
