--- a/login/index.html
+++ b/login/index.html
@@ -15,14 +15,45 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
   </head>
   <body>
-    
+    <img src="login/img/Group 51.png" alt="" />
+    <form action="login/login.php" method="post">
+      <h2>Đăng nhập</h2>
+      <p>Chào bạn, đăng nhập để tiếp tục !</p>
+      <p>Hoặc<a href="register/dangky.php">Tạo tài khoản mới</a></p>
+      <?php if (isset($_GET['error'])) { ?>
+      <p class="error"><?php echo $_GET['error']; ?></p>
+      <?php } ?>
+      <div class="header">
+        <input type="text" name="SDT" placeholder="Nhập số điện thoại" /><br />
+        <input type="password" name="password" placeholder="Nhập mật khẩu" /><br />
+        <button type="submit">Đăng nhập</button>
+      </div>
+      <p><a href="#">Quên mật khẩu</a></p>
+      <br />
+      <br />
+      <p>Hoặc</p>
+      <br />
+      <ul>
+        <li>
+          <a href="#"><i class="fab fa-facebook" id="fb"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-apple" id="apple"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-google-plus" id="gg"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter" id="tw"></i></a>
+        </li>
+      </ul>
+    </form>
   </body>
   <script src="./scripts/index.js"></script>
 </html>
