--- a/statistic/index.html
+++ b/statistic/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -21,8 +21,6 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
-    
-  </body>
+  <body></body>
   <script src="./scripts/index.js"></script>
 </html>
