--- a/login/index.html
+++ b/login/index.html
@@ -21,39 +21,43 @@
     />
   </head>
   <body>
-    <img src="login/img/Group 51.png" alt="" />
-    <form action="login/login.php" method="post">
-      <h2>Đăng nhập</h2>
-      <p>Chào bạn, đăng nhập để tiếp tục !</p>
-      <p>Hoặc<a href="register/dangky.php">Tạo tài khoản mới</a></p>
-      <?php if (isset($_GET['error'])) { ?>
-      <p class="error"><?php echo $_GET['error']; ?></p>
-      <?php } ?>
-      <div class="header">
-        <input type="text" name="SDT" placeholder="Nhập số điện thoại" /><br />
-        <input type="password" name="password" placeholder="Nhập mật khẩu" /><br />
-        <button type="submit">Đăng nhập</button>
-      </div>
-      <p><a href="#">Quên mật khẩu</a></p>
-      <br />
-      <br />
-      <p>Hoặc</p>
-      <br />
-      <ul>
-        <li>
-          <a href="#"><i class="fab fa-facebook" id="fb"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-apple" id="apple"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-google-plus" id="gg"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-twitter" id="tw"></i></a>
-        </li>
-      </ul>
-    </form>
+    <div class="container">
+      <form action="login/login.php" method="post" class="form-login">
+        <h1 class="header-text bold">Đăng nhập</h1>
+        <p class="sub-text">Chào bạn, đăng nhập để tiếp tục !</p>
+        <p class="sub-text">
+          Hoặc<a href="register/dangky.php" class="sub-link">Tạo tài khoản mới</a>
+        </p>
+        <?php if (isset($_GET['error'])) { ?>
+        <p class="error"><?php echo $_GET['error']; ?></p>
+        <?php } ?>
+        <div class="form-input">
+          <input type="text" name="SDT" placeholder="Nhập số điện thoại" class="input-text" /><br />
+          <input
+            type="password"
+            name="password"
+            placeholder="Nhập mật khẩu"
+            class="input-text"/>
+          <button type="submit" class="btn-submit">Đăng nhập</button>
+        </div>
+        <p><a href="#" class="sub-link semibold">Quên mật khẩu</a></p>
+        <p>Hoặc</p>
+        <ul>
+          <li>
+            <a href="#"><i class="fab fa-facebook" id="fb"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-apple" id="apple"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-google-plus" id="gg"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter" id="tw"></i></a>
+          </li>
+        </ul>
+      </form>
+    </div>
   </body>
   <script src="./scripts/index.js"></script>
 </html>
