--- a/reset all/index.html
+++ b/reset all/index.html
@@ -20,6 +20,8 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    alo
+  </body>
   <script src="./scripts/index.js"></script>
 </html>
