--- a/main-page/frames/menu/menu.html
+++ b/main-page/frames/menu/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Main_page/menu/menu.css">
+    <link rel="stylesheet" href="/main-page/frames/menu/menu.css">
 </head>
 <body>
     <div class="menu">
