images của main_page

--- a/main-page/index.html
+++ b/main-page/index.html
@@ -27,7 +27,7 @@
           <div class="centered">
             <ul class="list_menu">
               <li>
-                <img class="img_icon" src="/img/Logo .png" />
+                <img class="img_icon" src="/main-page/images/Logo .png" />
               </li>
               <li>
                 <div class="search">
@@ -52,7 +52,7 @@
               </li>
               <li class="li_account">
                 <div class="dropdown">
-                  <img class="img_account" src="/img/anh-anime.jpg" />
+                  <img class="img_account" src="/main-page/images/anh-anime.jpg" />
                   <button class="dropbtn">Nhóm 11</button>
                   <div class="dropdown-content">
                     <!-- href="/Main_page/home/ho_so_ca_nhan/ho_so.html -->
