--- a/main-page/index.html
+++ b/main-page/index.html
@@ -26,7 +26,7 @@
         <div class="header_container">
           <div class="centered">
             <ul class="list_menu">
-              <li>
+              <li class="img_li">
                 <img class="img_icon" src="/main-page/images/Logo .png" />
               </li>
               <li>
@@ -37,19 +37,19 @@
                   <button>Tìm kiếm</button>
                 </div>
               </li>
-              <li class="style_icon">
-                <ul class="icon">
-                  <li>
-                    <a><i class="fab fa-facebook-messenger"></i></a>
-                  </li>
-                  <li>
-                    <a><i class="fas fa-bell"></i></a>
-                  </li>
-                  <li>
-                    <a><i class="fas fa-bars"></i></a>
-                  </li>
-                </ul>
+              <!-- <li class="style_icon">
+                <ul class="icon"> -->
+              <li class="icon">
+                <a><i class="fab fa-facebook-messenger"></i></a>
               </li>
+              <li class="icon">
+                <a><i class="fas fa-bell"></i></a>
+              </li>
+              <li class="icon">
+                <a><i class="fas fa-bars"></i></a>
+              </li>
+                <!-- </ul>
+              </li> -->
               <li class="li_account">
                 <div class="dropdown">
                   <img class="img_account" src="/main-page/images/anh-anime.jpg" />
