main_page + menu + ho_so (html + css )

--- a/main-page/frames/ho_so_ca_nhan/ho_so.html
+++ b/main-page/frames/ho_so_ca_nhan/ho_so.html
@@ -14,7 +14,10 @@
             <iframe class="frame_menu" src="/main-page/frames/menu/menu.html" frameborder="0"></iframe>
         </div>
         <div class="page_info">
-            <h1>Hello</h1>
+            <div class="info_container">
+                <h1>SẢN PHẨM</h1>
+                
+            </div>
         </div>
     </div>
 </body>
