--- a/login/index.html
+++ b/login/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="login/login.php" method="post" class="form-login">
+      <form action="./login.php" method="post" class="form-login">
         <h1 class="header-text bold">Đăng nhập</h1>
         <p class="sub-text">Chào bạn, đăng nhập để tiếp tục !</p>
         <p class="sub-text">
@@ -33,13 +33,21 @@
         <?php } ?>
         <div class="form-group">
           <input type="text" name="SDT" placeholder="Nhập số điện thoại" class="input-text" /><br />
-          <input type="password" name="password" placeholder="Nhập mật khẩu" />
-          <button type="submit" class="btn-submit">Đăng nhập</button>
+          <div class="relative">
+            <input
+              type="password"
+              name="password"
+              placeholder="Nhập mật khẩu"
+              id="passwd"
+            />
+            <i class="fas fa-eye showpwd" onclick="showPassword('passwd', this)"></i>
+          </div>
+          <button type="submit">Đăng nhập</button>
         </div>
         <p class="m-20-0"><a href="#" class="semi-bold sub-link">Quên mật khẩu</a></p>
         <div class="m-40-0 upcase light or">
           <span class="abs-text">hoặc</span>
-          <hr>
+          <hr />
         </div>
         <ul>
           <li>
