--- a/account/index.html
+++ b/account/index.html
@@ -20,6 +20,88 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+   
+        <div class="header_container">
+          <div class="centered">
+            <ul class="list_menu">
+              <li  class="img_li">
+                <img class="img_icon" src="/main-page/images/Logo .png" />
+              </li>
+              <li  class="search">
+                <div>
+                  <i class="fas fa-search" style="font-size: 25px"></i>
+
+                  <input class="type_search" type="text" placeholder="Bạn muốn tìm..." />
+                  <button>Tìm kiếm</button>
+                </div>
+              </li>
+              <li class="header-others">
+                <ul>
+                  <li class="icon">
+                    <a><i class="fab fa-facebook-messenger"></i></a>
+                  </li>
+                  <li class="icon">
+                    <a><i class="fas fa-bell"></i></a>
+                  </li>
+                  <li class="icon">
+                    <a><i class="fas fa-bars"></i></a>
+                  </li>
+                  <li class="li_account">
+                    <div class="dropdown">
+                      <img class="img_account" src="/main-page/images/anh-anime.jpg" />
+                      <button class="dropbtn">Nhóm 11</button>
+                      <div class="dropdown-content">
+                        <!-- href="/Main_page/home/ho_so_ca_nhan/ho_so.html -->
+                        <a target="content" href="/Main_page/home/ho_so_ca_nhan/ho_so.html"
+                          ><i class="fas fa-user"></i>Hồ sơ cá nhân</a
+                        >
+                        <a href=""><i class="fas fa-store-alt"></i>Thông tin shop</a>
+                        <a href=""><i class="fas fa-key"></i>Mật khẩu</a>
+                        <a href=""><i class="fas fa-sign-out-alt"></i>Đăng xuất</a>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="navbar">
+            <a class="style_button_home" target="content" href="/Main_page/home/home.html"
+              ><i class="fas fa-home"></i
+            ></a>
+            <a target="content" href="">DANH MỤC MÓN ĂN</a>
+            <a target="content" href="../Chinhsuamenu/html/mau.html" class="color_text_head"
+              >CHỈNH SỬA MENU</a
+            >
+            <a target="content" href="#">THỐNG KÊ DOANH THU</a>
+          </div>
+        </div>
+        <div class="body_container">
+          <iframe
+            class="frame_menu" name="content" frameborder="0"
+          ></iframe>
+        </div>
+        <div class="footer">
+          <h1>FATME.com</h1>
+          <div class="info_fatme">
+            <ul>
+              <li>Liên kết</li>
+              <li>Contact</li>
+              <li>Fanpage</li>
+            </ul>
+          </div>
+          <div class="icon_fatme">
+            <ul>
+              <li><i class="fab fa-facebook-square"></i></li>
+              <li><i class="fab fa-instagram"></i></li>
+              <li><i class="fab fa-youtube"></i></li>
+            </ul>
+          </div>
+       
+      </div>
+
+  </body>
   <script src="./scripts/index.js"></script>
 </html>
