--- a/Home_main_page/index.html
+++ b/Home_main_page/index.html
@@ -27,7 +27,7 @@
           <div class="centered">
             <ul class="list_menu">
               <li  class="img_li">
-                <img class="img_icon" src="/main-page/images/Logo .png" />
+                <img class="img_icon" src="images/Logo .png" />
               </li>
               <li  class="search">
                 <div>
@@ -50,7 +50,7 @@
                   </li>
                   <li class="li_account">
                     <div class="dropdown">
-                      <img class="img_account" src="/main-page/images/anh-anime.jpg" />
+                      <img class="img_account" src="images/anh-anime.jpg" />
                       <button class="dropbtn">Nhóm 11</button>
                       <div class="dropdown-content">
                         <!-- href="/Main_page/home/ho_so_ca_nhan/ho_so.html -->
@@ -72,7 +72,7 @@
               ><i class="fas fa-home"></i
             ></a>
             <a target="content" href="">DANH MỤC MÓN ĂN</a>
-            <a target="content" href="../Chinhsuamenu/html/mau.html" class="color_text_head"
+            <a target="content" href="../chinh_sua_menu/" class="color_text_head"
               >CHỈNH SỬA MENU</a
             >
             <a target="content" href="#">THỐNG KÊ DOANH THU</a>
