--- a/Home_main_page/index.html
+++ b/Home_main_page/index.html
@@ -72,7 +72,7 @@
               ><i class="fas fa-home"></i
             ></a>
             <a target="content" href="">DANH MỤC MÓN ĂN</a>
-            <a target="content" href="../chinh_sua_menu/" class="color_text_head"
+            <a target="content" href="../edit_menu/index.html" class="color_text_head"
               >CHỈNH SỬA MENU</a
             >
             <a target="content" href="#">THỐNG KÊ DOANH THU</a>
