--- a/edit_menu/frames/Danh_sach_san_pham/index.html
+++ b/edit_menu/frames/Danh_sach_san_pham/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hồ sơ cá nhân</title>
-    <link rel="stylesheet" href="/main-page/frames/ho_so_ca_nhan/ho_so_ca_nhan.css">
+    <link rel="stylesheet" href="css/app.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
@@ -15,19 +15,17 @@
 </head>
 <body>
     <div class="main_info">
-        <div class="menu">
-            
-            <iframe class="frame_menu" src="/main-page/frames/menu/menu.html" frameborder="0"></iframe>
-        </div>
         <div class="page_info">
             <div class="info_container">
                 <h1>SẢN PHẨM</h1>
                 <div class="product">
-                    <ul>
-                        <li><i class="fas fa-file-download"></i><a href="">Xuất sản phẩm</a></li>
-                        <li><i class="fas fa-file-upload"></i><a href="">Nhập sản phẩm</a></li>
-                        <li style=" float: right;"><button>+ Thêm sản phẩm</button></li>
-                    </ul>
+                   <div class="ex_in_port">
+                        <a href=""><i class="fas fa-file-download"></i>Xuất sản phẩm</a>
+                        <a href=""> <i class="fas fa-file-upload"></i>Nhập sản phẩm</a>
+                    </div>
+                    <div>
+                       <button> + Thêm sản phẩm</button>
+                    </div>
                 </div>
                 <div class="all_product">
                     <div class="heading">
