--- a/login/index.html
+++ b/login/index.html
@@ -32,7 +32,7 @@
         <p class="error"><?php echo $_GET['error']; ?></p>
         <?php } ?>
         <div class="form-group">
-          <input type="text" name="SDT" placeholder="Nhập số điện thoại" class="input-text" /><br />
+          <input type="text" name="SDT" placeholder="Nhập tên tài khoản" class="input-text" /><br />
           <div class="relative">
             <input
               type="password"
