--- a/register/index.html
+++ b/register/index.html
@@ -30,7 +30,7 @@
         </p>
 
         <?php if (isset($_GET['error'])) { ?>
-        <p class="error"><?php echo $_GET['error']; ?></p>
+        <p class="error sub-text"><?php echo $_GET['error']; ?></p>
         <?php } ?>
 
         <div class="form-group">
@@ -56,8 +56,8 @@
             <i class="fas fa-eye showpwd" onclick="showPassword('passwd2', this)"></i>
           </div>
           <div class="dieukhoan">
-            <input type="checkbox" name="checkbox" class="input-checkbox" id="checkbox" />
-            <label for="checkbox" class="sub-link">Chấp nhận điều khoản và dịch vụ</label>
+            <input type="checkbox" name="checkbox" class="input-checkbox" id="checkbox" placeholder=" "/>
+            <label for="checkbox" class="label-checkbox">Chấp nhận điều khoản và dịch vụ</label>
           </div>
           <button type="submit">Đăng ký</button>
         </div>
